--- a/starter_code/public/stylesheets/style.css
+++ b/starter_code/public/stylesheets/style.css
@@ -1,12 +1,10 @@
 body {
   padding: 0px;
   margin: 0px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 a {
-  color: #00B7FF;
-}
+  color: #00B7FF; }
 
 /*
 >=>>=>        >===>      >====>     >=>      >=> 
@@ -17,13 +15,11 @@ a {
 >>     >>   >=>     >=>  >=>   >=>      >=>      
 >===>>=>      >===>      >====>         >=> 
 */
-
 #home {
   background-image: url("../images/cinema.jpg");
-  height: 100vh;
-}
+  height: 100vh; }
 
+#home h1 {
+  margin: 0px; }
 
-#home h1{
-margin : 0px;
-}
+/*# sourceMappingURL=style.css.map */
