--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,2 +1,10 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div id="home">
+  
+<h1>Cinema Ironhack</h1>
+
+<form action="/movies" >
+  <input type="button" value="Check the movies">
+</form>
+
+
+</div>
