--- a/starter_code/public/stylesheets/style.scss
+++ b/starter_code/public/stylesheets/style.scss
@@ -1,8 +1,42 @@
+*, :before, :after { box-sizing:border-box}
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+  margin:0;
+  padding:0;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 a {
-  color: #00B7FF;
+  color: #00B7FF; }
+
+.container-home {
+  background-image: url("/images/cinema.jpg"); 
+  background-repeat:no-repeat; 
+  background-size: 100% 100%;
+  height:100vh;
+}
+
+.container-home .buttons{
+  width:50%;
+  margin-left:auto;
+  position:relative; 
+  top:10%;
+
+}
+
+.container-home .buttons h1{
+  margin-top:0;
+  margin-bottom:0.6em;
+  font-size: 7.4em;
+  color:white;
+  line-height: 1.2em;
+ 
+
+}
+
+.container-home .buttons a{
+  text-decoration: none;
+  border-radius: 1.6em;
+  background-color:white;
+  padding: 1em 2.5em;
+  font-size:1.3em;
 }
