--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,2 +1,11 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+<div id="background-Home-Page">
+    <div class="title-container">
+        <h1>{{title}}</h1>
+    </div>
+    <button class="button">
+        <a href="/movies">
+            {{button}}
+        </a></button>
+</div>
