--- a/starter_code/public/stylesheets/style.scss
+++ b/starter_code/public/stylesheets/style.scss
@@ -1,8 +1,21 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-image: url(/images/cinema.jpg);
+  background-size:cover;
 }
-
 a {
   color: #00B7FF;
+}
+#title{
+  color : white;
+  font-weight:700; 
+  font-size :5em; 
+  text-align: right; 
+}
+#btn{
+  border-radius: 10px;
+  background-color: white;
+  padding: 10px;
+  font-size : 50px; 
 }
