--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,2 +1,3 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1 id= 'title'>Cinema Ironhack</h1>
+
+<button id ="btn"><a href ="/movies"></a>Check the movies!</a></button>
