--- a/starter_code/public/stylesheets/style.css
+++ b/starter_code/public/stylesheets/style.css
@@ -2,8 +2,8 @@
   box-sizing: border-box; }
 
 body {
-  margin: 0;
-  padding: 0;
+  margin: 1px;
+  padding: 0 5px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 a {
@@ -16,23 +16,23 @@ a {
   height: 100vh; }
 
 .container-home .buttons {
-  width: 50%;
+  width: 40%;
   margin-left: auto;
   position: relative;
-  top: 10%; }
+  top: 8%; }
 
 .container-home .buttons h1 {
   margin-top: 0;
-  margin-bottom: 0.6em;
-  font-size: 7.4em;
+  margin-bottom: 0.5em;
   color: white;
-  line-height: 1.2em; }
+  font-size: 7em;
+  line-height: 1.1em; }
 
 .container-home .buttons a {
   text-decoration: none;
   border-radius: 1.6em;
   background-color: white;
-  padding: 1em 2.5em;
-  font-size: 1.3em; }
+  padding: 1em 2.3em;
+  font-size: 1.1em; }
 
 /*# sourceMappingURL=style.css.map */
