--- a/starter_code/public/stylesheets/style.scss
+++ b/starter_code/public/stylesheets/style.scss
@@ -1,12 +1,22 @@
 *, :before, :after { box-sizing:border-box}
 
 body {
-  margin:0;
-  padding:0;
+  margin:1px;
+  padding:0 5px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 a {
   color: #00B7FF; }
+
+/*
+ #     #                      
+ #     #  ####  #    # ###### 
+ #     # #    # ##  ## #      
+ ####### #    # # ## # #####  
+ #     # #    # #    # #      
+ #     # #    # #    # #      
+ #     #  ####  #    # ###### 
+*/
 
 .container-home {
   background-image: url("/images/cinema.jpg"); 
@@ -16,19 +26,19 @@ a {
 }
 
 .container-home .buttons{
-  width:50%;
+  width:40%;
   margin-left:auto;
   position:relative; 
-  top:10%;
+  top:8%;
 
 }
 
 .container-home .buttons h1{
   margin-top:0;
-  margin-bottom:0.6em;
-  font-size: 7.4em;
+  margin-bottom:0.5em;
   color:white;
-  line-height: 1.2em;
+  font-size: 7em;
+  line-height: 1.1em;
  
 
 }
@@ -37,6 +47,18 @@ a {
   text-decoration: none;
   border-radius: 1.6em;
   background-color:white;
-  padding: 1em 2.5em;
-  font-size:1.3em;
+  padding: 1em 2.3em;
+  font-size:1.1em;
 }
+
+/*
+
+ #     #                               
+ ##   ##  ####  #    # # ######  ####  
+ # # # # #    # #    # # #      #      
+ #  #  # #    # #    # # #####   ####  
+ #     # #    # #    # # #           # 
+ #     # #    #  #  #  # #      #    # 
+ #     #  ####    ##   # ######  ####  
+                                       
+*/
