--- a/starter_code/public/stylesheets/style.css
+++ b/starter_code/public/stylesheets/style.css
@@ -1,23 +1,19 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-
   background-image: url("/images/cinema.jpg");
   background-size: cover;
-  background-repeat: no-repeat;
-}
+  background-repeat: no-repeat; }
 
 a {
   color: #00B7FF; }
 
 .home-page {
-  margin-left: 52em;
-}
+  margin-left: 52em; }
 
 .home-page h1 {
   color: white;
-  font-size: 90px;
-}
+  font-size: 90px; }
 
 .home-page a {
   font-size: 18px;
@@ -25,5 +21,6 @@ a {
   background-color: white;
   padding: 15px 30px;
   text-decoration: none;
-  border-radius: 2em;
-}
+  border-radius: 2em; }
+
+/*# sourceMappingURL=style.css.map */
