--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,2 +1,4 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="home-page">
+  <h1>Cinema<br/>Ironhack</h1>
+  <a class="btn" href="/movies">Check the movies</a>
+</div>
