--- a/starter_code/public/stylesheets/style.scss
+++ b/starter_code/public/stylesheets/style.scss
@@ -1,8 +1,77 @@
+* :before, after {
+  box-sizing:border-box;
+  
+  }
+
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin:0; /* reset */
+  width:100vw;
+  height:100vh;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+
+img {
+  max-width:100%;
+  }
+
+.accueil {
+  background: black url("../images/cinema.jpg") no-repeat;
+  background-size: cover; 
+  height:100vh;}
+
+.accueil h1 {
+  display:block;
+  color: White;
+  font-size: 10em;
+  width: 33%;
+  height:25%;
+  margin-left:1200px;
+  padding-top:1.5em;
+  margin-top:0;
+  
+}
+.accueil a {
+  color: rgb(120, 163, 176); 
+  display:block;
+  font-size: 2em;
+  border: 0;
+  padding:20px;
+  border-radius: 40px;
+  text-decoration: none;
+  background-color: white;
+  margin-left: 1200px;
+  margin-top:2em;
+  margin-bottom:auto;
+  width: 20%;
+  text-align:center;
 }
 
-a {
-  color: #00B7FF;
+.totalMovies {
+  display:flex;
+  flex-wrap:wrap;
+  justify-content: space-around;
+}
+
+.movies {
+  width:30%;
+  padding:2em;
+  text-align: center;
+}
+
+.movies a {
+  color: #00B7FF; 
+}
+
+.movieDetails {
+  display:flex;
+  width: 80%;
+  align-items: center;
+  margin-top:30vh;
+  margin-left:auto;
+  margin-right:auto;
+}
+/*# sourceMappingURL=style.css.map */
+
+.movieDetails img {
+  margin:20px;
 }
