--- a/starter_code/views/movies.hbs
+++ b/starter_code/views/movies.hbs
@@ -3,7 +3,7 @@
   <div class="card">
     <img src="{{image}}">
     <h2>{{title}}</h2>
-    <a href="/movie/{{_id}}">See more</a>
+    <a href="/movies/{{_id}}">See more</a>
   </div>
   {{/each}}
 </div>
