--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,2 +1,4 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="title">
+<h1>IRON CINEMA</h1>
+   <a href="/movies">CHECK THE MOVIES</a>
+</div>
