--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,2 +1,6 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div id="homepage">
+  <div id="interaction">
+    <h1>Cinema<br/>Ironhack</h1>
+    <a href="/movies">Check the movies!</a>
+  </div>
+</div>
