--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,2 +1,25 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>cinema</title>
+  <link rel="stylesheet" href="/stylesheets/style-index.css" />
+</head>
+<body>
+
+  <div class="title">
+    <h1>Cinema Ironhack</h1>
+  </div>
+
+  <div class="check">
+      <a href="/movies">Check the movies!</a>
+  </div>
+
+  <script src="/javascripts/script.js"></script>
+</body>
+</html>
+
