--- a/starter_code/public/stylesheets/style.scss
+++ b/starter_code/public/stylesheets/style.scss
@@ -1,8 +1,57 @@
+/* ---- 
+DEFAUT
+---- */
+*,
+:before,
+:after {
+	margin: 0;
+	padding: 0;
+	outline: 0;
+	box-sizing: border-box;
+}
+
+/* ---- 
+ELEMENTS
+---- */
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	padding: 50px;
+	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	background-image: url(/images/cinema.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	color: white;
+	display: flex;
+	width: 100vw;
+	height: 100vh;
+	flex-direction: row-reverse;
 }
 
 a {
-  color: #00B7FF;
+	color: #00b7ff;
+	text-decoration: none;
+	font-size: 1.75em;
+}
+
+h1 {
+	font-size: 6em;
+	margin-bottom: 30px;
+}
+
+button {
+	padding: 1.5em 2.75em;
+	border-radius: 30px;
+	width: fit-content;
+}
+
+/* ---- 
+CLASSES
+---- */
+
+.div-index {
+	width: 45vw;
+	height: 80vh;
+	display: flex;
+	flex-direction: column;
+	padding: 2em 0 0 10em;
 }
