--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,2 +1,4 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="div-index">
+    <h1>{{title}}</h1>
+    <button><a href='/movies'>Check the movies!</a></button>
+</div>
