--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,2 +1,7 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+<div class="cover"></div>
+    <h1>Cinema Ironhack</h1>
+    <a class="btn" href="/movies">check the movies!</a>
+</div>
