--- a/starter_code/public/stylesheets/style.css
+++ b/starter_code/public/stylesheets/style.css
@@ -2,7 +2,7 @@
   box-sizing: border-box; }
 
 body {
-  margin:0;
+  margin: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 a {
@@ -19,17 +19,14 @@ a {
   display: flex;
   flex-direction: column;
   padding-top: 10em;
-  margin-left: 60%;
-  
-}
+  margin-left: 60%; }
 
 .h1-home {
   margin-top: 0;
   margin-bottom: 0.5em;
   color: white;
   font-size: 7em;
-  width: 7em;
-}
+  width: 7em; }
 
 .btn-home {
   font-size: 1.5em;
@@ -38,5 +35,6 @@ a {
   border-radius: 100px;
   text-decoration: none;
   text-align: center;
-  padding: 1em 1em;
-}
+  padding: 1em 1em; }
+
+/*# sourceMappingURL=style.css.map */
