--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,2 +1,6 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="home-page"> 
+  <div class="box-home">
+    <h1 class="h1-home">Cinema Ironhack</h1>
+    <a class="btn-home" href="/movies">Check the movies!</a>
+  </div>
+</div>
