--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,4 +1,6 @@
 <div class="home-page">
-  <h1>Cinema<br/>Ironhack</h1>
-  <a class="btn" href="/movies">Check the movies</a>
+  <div class="home-page-text">
+    <h1>Cinema<br/>Ironhack</h1>
+    <a class="btn" href="/movies">Check the movies</a>
+  </div>
 </div>
