--- a/starter_code/public/stylesheets/style.scss
+++ b/starter_code/public/stylesheets/style.scss
@@ -15,16 +15,7 @@ ELEMENTS
 ---- */
 
 body {
-	padding: 50px;
 	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-	background-image: url(/images/cinema.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-	color: white;
-	display: flex;
-	width: 100vw;
-	height: 100vh;
-	flex-direction: row-reverse;
 }
 
 a {
@@ -48,10 +39,67 @@ button {
 CLASSES
 ---- */
 
-.div-index {
-	width: 45vw;
-	height: 80vh;
+.ctn-index {
+	padding: 50px;
+	background-image: url(/images/cinema.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	color: white;
 	display: flex;
-	flex-direction: column;
-	padding: 2em 0 0 10em;
+	width: 100vw;
+	height: 100vh;
+	flex-direction: row-reverse;
+	.div-index {
+		width: 45vw;
+		height: 80vh;
+		display: flex;
+		flex-direction: column;
+		padding: 2em 0 0 10em;
+	}
+}
+
+.div-movies {
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-content: flex-start;
+	justify-content: space-around;
+	background-image: none;
+	h1 {
+		font-size: 150%;
+		width: 100vw;
+		display: block;
+		padding: 20px 40px 0;
+		margin-bottom: 0;
+	}
+	> p {
+		width: 100vw;
+		display: block;
+		padding: 20px 40px 0;
+		margin-bottom: 2em;
+	}
+	.movie {
+		width: 30vw;
+		height: 30vh;
+		flex-direction: column;
+		margin-bottom: 20vh;
+		text-align: center;
+		img {
+			text-align: center;
+			justify-content: center;
+			width: 15vw;
+			padding-bottom: 1em;
+		}
+		p {
+			font-weight: 700;
+			font-size: 120%;
+			padding-bottom: 0.5em;
+		}
+		> a {
+			font-size: 120%;
+			text-decoration: underline;
+		}
+	}
 }
