--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,4 +1,6 @@
-<div class="div-index">
-    <h1>{{title}}</h1>
-    <button><a href='/movies'>Check the movies!</a></button>
+<div class="ctn-index">
+    <div class="div-index">
+        <h1>{{title}}</h1>
+        <button><a href='/movies'>Check the movies!</a></button>
+    </div>
 </div>
