--- a/starter_code/public/stylesheets/style.scss
+++ b/starter_code/public/stylesheets/style.scss
@@ -103,3 +103,38 @@ CLASSES
 		}
 	}
 }
+
+.div-movie {
+	width: 70vw;
+	height: 100vh;
+	display: flex;
+	align-items: flex-start;
+	padding: 3em;
+	img {
+		display: block;
+	}
+	.movie-metadata {
+		padding-left: 2em;
+		a {
+			font-size: 100%;
+			text-decoration: underline;
+			margin-bottom: 1em;
+			display: inline-block;
+		}
+		> h1 {
+			font-size: 1.5em;
+			margin-bottom: 0.25em;
+		}
+		h2 {
+			font-size: 1.1em;
+			padding-bottom: 1em;
+		}
+		.movie-description {
+			padding: 1em 0;
+			text-align: justify;
+		}
+		li {
+			margin-left: 1em;
+		}
+	}
+}
