--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,2 +1,10 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="homepage">
+    <h1> 
+      Cinema Ironhack
+    </h1>
+
+  <button name="button" href="./movies.hbs">Check the movies !</button>
+
+</div>
+
+
