--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,2 +1,7 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="index-container">
+  <img src="../public/images/cinema.jpg">
+  <h1>Cinema Ironhack</h1>
+  <p>
+    <a class="btn" href="/movies">Check the movies</a>
+  </p>
+</div>
